# tomatenplukkers

./: .gitmodules  .travis.yml  README.md
Matlab/: edgetest  edgetest.m  findProbValues.m  findaaar.m  findaaar2.m  imageProc.m
camera/1/: left.yaml  right.yaml
camera/2/: left.yaml  right.yaml
catkin_ws/: .gitignore  .gitmodules  .rosinstall  .rosinstall.bak
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/arm_control/: CMakeLists.txt  package.xml
catkin_ws/src/arm_control/src/arm_control/: arm_control.cpp  node_arm_control.cpp
catkin_ws/src/arm_control/src/gripper_control/: gripper_control.cpp  node_gripper_control.cpp
catkin_ws/src/core/: CMakeLists.txt  package.xml
catkin_ws/src/core/src/core/: node_core.cpp
catkin_ws/src/cucumber_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/cucumber_msgs/include/cucumber_msgs/: CucumberContainer.h  cucumberContainer.h
catkin_ws/src/cucumber_msgs/msg/: Cucumber.msg  HarvestStatus.msg
catkin_ws/src/cucumber_msgs/srv/: DebugMove.srv  HarvestAction.srv
catkin_ws/src/cucumber_msgs/test/: test_cucumberContainer.cpp
catkin_ws/src/image_processing/: CMakeLists.txt  package.xml
catkin_ws/src/image_processing/src/: cucumberContainer.cpp
catkin_ws/src/image_processing/src/IdCB/: IdCB.cpp  node_IdCB.cpp
catkin_ws/src/image_processing/src/cVis/: cVis.cpp  node_cVis.cpp
catkin_ws/src/interface/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/interface/src/: settingsManager.py
catkin_ws/src/kpr_arm_control/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/kpr_arm_control/config/: ur5.gv  ur5.urdf
catkin_ws/src/kpr_arm_control/launch/: arm.launch  kaspr_bringup.launch  kaspr_upload.launch
catkin_ws/src/kpr_arm_control/src/arm_control/: arm_control.cpp  moveit_consts.h  node_arm_control.cpp  planning_scene_objects.cpp
catkin_ws/src/kpr_arm_control/src/py_arm_control/: arm_control.py  enums.py  sceneObjects.py  states.py
catkin_ws/src/kpr_arm_control/urdf/: kaspr.urdf.xacro  kaspr_joint_limited_robot.urdf.xacro  kaspr_robot.urdf.xacro
catkin_ws/src/kpr_core/: CMakeLists.txt  package.xml
catkin_ws/src/kpr_core/launch/: core.launch
catkin_ws/src/kpr_core/src/core/: core.cpp  node_core.cpp
catkin_ws/src/kpr_core/test/: test_core.cpp
catkin_ws/src/kpr_image_processing/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/kpr_image_processing/launch/: image_processing.launch
catkin_ws/src/kpr_image_processing/src/: disparityFixer.py  pointcloudFlowControl.py
catkin_ws/src/kpr_image_processing/src/IdCB/: IdCB.cpp  node_IdCB.cpp
catkin_ws/src/kpr_image_processing/src/cVis/: cVis.cpp  node_cVis.cpp
catkin_ws/src/kpr_image_processing/test/: TEST_IdCB.cpp
catkin_ws/src/kpr_interface/: CMakeLists.txt  package.xml
catkin_ws/src/kpr_interface/cfg/: settings.json
catkin_ws/src/kpr_interface/launch/: interface.launch
catkin_ws/src/kpr_interface/msg/: SetSetting.msg
catkin_ws/src/kpr_interface/src/: interface.py  settingsManager.py
catkin_ws/src/kpr_interface/srv/: GetSetting.srv  GetSettings.srv  SettingsIO.srv
catkin_ws/src/kpr_launch/: CMakeLists.txt  URsim.sh  classes.txt  networkSetup.sh  package.xml  robot.launch  test.launch
catkin_ws/src/kpr_launch/launch/: image_pipeline.launch  robot.launch  ros_faster_rcnn.launch  testing.launch
catkin_ws/src/kpr_testing/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py  setup.py~
catkin_ws/src/kpr_testing/launch/: testing.launch
catkin_ws/src/kpr_testing/src/: io_pins.py  valves.py  valves.py~
catkin_ws/src/universal_robot/: .gitignore
catkin_ws/src/universal_robot/ur5_moveit_config/config/: sensors_bumblebee.yaml
catkin_ws/src/universal_robot/ur5_moveit_config/launch/: moveit.rviz  ur5_moveit_sensor_manager.launch.xml
catkin_ws/src/universal_robot/ur_bringup/: package.xml
catkin_ws/src/universal_robot/ur_description/urdf/: ur5.urdf.xacro
catkin_ws/src/universal_robot/ur_kinematics/: CMakeLists.txt
matlab/: extractROI.m
