<?xml version="1.0"?>
<package>
  <name>image_processing</name>
  <version>0.0.1</version>
  <description>A package containing image processing nodes used in the 'Tomatenplukkers' project.</description>

  <maintainer email="chielbruin@tele2.nl">Chiel Bruin</maintainer>
  <author email="chielbruin@tele2.nl">Chiel Bruin</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <url type="repository">https://github.com/ChielBruin/tomatenplukkers</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <export> </export>
</package>
