<?xml version="1.0"?>
<package>
	<name>kpr_arm_control</name>
	<version>0.0.1</version>
	<description>A package containing the control of the UR5 arm using the MoveIt! framework.</description>

	<maintainer email="max_groenenboom@hotmail.com">Max Groenenboom</maintainer>
	<author email="max_groenenboom@hotmail.com">Max Groenenboom</author>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<url type="repository">https://github.com/ChielBruin/tomatenplukkers</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>smach</build_depend>
	<build_depend>smach_ros</build_depend>
	<build_depend>message_generation</build_depend>

	<build_depend>ur_msgs</build_depend>
	<build_depend>ur5_moveit_config</build_depend>

	<build_depend>moveit_core</build_depend>
	<build_depend>moveit_msgs</build_depend>

	<build_depend>cucumber_msgs</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>smach</run_depend>
	<run_depend>smach_ros</run_depend>
	<run_depend>message_runtime</run_depend>

	<run_depend>ur_msgs</run_depend>
	<run_depend>ur_bringup</run_depend>
	<run_depend>ur5_moveit_config</run_depend>
	
	<run_depend>moveit_core</run_depend>
	<run_depend>moveit_msgs</run_depend>

	<run_depend>cucumber_msgs</run_depend>
</package>
