<?xml version="1.0"?>
<package>
	<name>kpr_core</name>
	<version>0.0.1</version>
	<description>A package containing the core behaviour nodes of the 'Tomatenplukkers' project.</description>

	<maintainer email="chielbruin@tele2.nl">Chiel Bruin</maintainer>
	<author email="chielbruin@tele2.nl">Chiel Bruin</author>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<url type="repository">https://github.com/ChielBruin/tomatenplukkers</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>cucumber_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>kpr_interface</build_depend>
	<build_depend>diagnostic_msgs</build_depend>


	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>cucumber_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>kpr_interface</run_depend>
	<run_depend>diagnostic_msgs</run_depend>

	<export> </export>
</package>
