<?xml version="1.0"?>
<package>
	<name>kpr_launch</name>
	<version>0.0.1</version>
	<description>A package containing launch files that can be used to start the robot.</description>

	<maintainer email="chielbruin@tele2.nl">Chiel Bruin</maintainer>
	<author email="chielbruin@tele2.nl">Chiel Bruin</author>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<url type="repository">https://github.com/ChielBruin/tomatenplukkers</url>


	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roslaunch</build_depend>
	<build_depend>xacro</build_depend>
	
	<run_depend>roslaunch</run_depend>
	<run_depend>kpr_interface</run_depend>
	<run_depend>ros_faster_rcnn</run_depend>
	<run_depend>kpr_core</run_depend>
	<run_depend>kpr_image_processing</run_depend>
	<run_depend>kpr_arm_control</run_depend>
	<run_depend>ur_description</run_depend>
	<run_depend>ur_bringup</run_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>kpr_testing</run_depend>
	<run_depend>ur_driver</run_depend>
	<run_depend>xacro</run_depend>
	<run_depend>joint_state_publisher</run_depend>

	<export> </export>
</package>
